소켓 전체 채팅

--- a/backend/views/roomInfo.html
+++ b/backend/views/roomInfo.html
@@ -21,12 +21,10 @@
     <section id="section-main">
         <section id="section-video">
             <div id="root-video-grid">
-                <video></video>
             </div>
         </section>
         <section id="section-chat" style="display: none">
-            <ul>
-                <li>안녕</li>
+            <ul id="list-chat">
             </ul>
             <div>
                 <span>
@@ -36,12 +34,11 @@
                 </select>
                 </span>
                 <span>
-                    <form>
+                    <form id="form-chat-send">
 
-                        <input>
+                        <input id="input-send-chat">
                         <button>전송</button>
                     </form>
-
                     </span>
             </div>
         </section>
