프로필 사진 변경 (서버에 업로드 )

--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -134,3 +134,9 @@ video{
     border-radius: 13px;
     color: white;
 }
+
+#profile-img{
+    border-radius: 70%;
+    height: 200px;
+    width: 200px;
+}
