--- a/backend/views/login.html
+++ b/backend/views/login.html
@@ -6,12 +6,13 @@
         <h1>Every Square</h1>
         <fieldset>
             <legend>로그인</legend>
-            <img id="img-kakao-login" src="/kakao_login_medium_wide.png"></img>
+            <img id="img-kakao-login" src="/kakao_login_medium_wide.png" ></img>
         </fieldset>
     </div>
 </div>
 {% endblock %}
 
 {% block script %}
+<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 <script src="/login.js"></script>
 {% endblock %}
