--- a/backend/views/setting.html
+++ b/backend/views/setting.html
@@ -59,6 +59,9 @@
     </nav>
     <main id="main-screen">
         <section>
+            <button>
+                로그아웃
+            </button>
 
         </section>
     </main>
