--- a/backend/views/search.html
+++ b/backend/views/search.html
@@ -67,23 +67,26 @@
                 </button>
             </form>
 
-            {% for room in roomList %}
-            <div id="room-list-view" style="border: 1px solid black; overflow: auto">
-                {% if room.isPublic %}
-                <div>
-                    <span>{{room.roomName}}</span>
-                    <span>{{room.maxUser}}</span>
+            <div style="overflow: auto; height: 1fr">
+                {% for room in roomList %}
+                <div id="room-list-view" style="border: 1px solid black;">
+                    {% if room.isPublic %}
+                    <div>
+                        <span>{{room.roomName}}</span>
+                        <span>{{room.maxUser}}</span>
+                    </div>
+                    <div>{{room.roomDescription}}</div>
+                    <button>
+                        참가
+                    </button>
+                    <button>
+                        상세보기
+                    </button>
+                    {% endif %}
                 </div>
-                <div>{{room.roomDescription}}</div>
-                <button>
-                    참가
-                </button>
-                <button>
-                    상세보기
-                </button>
-                {% endif %}
+                {% endfor %}
+
             </div>
-            {% endfor %}
 
         </section>
     </main>
