db 관계정의, 방에 참가한 사람 db 에 업데이트

--- a/backend/views/roomInfo.html
+++ b/backend/views/roomInfo.html
@@ -14,7 +14,7 @@
         profileURL: USER_PROFILE_URL,
         nickname: USER_NAME
     }
-    const ROOM_KEY = "{{roomKey}}}";
+    const ROOM_KEY = "{{roomKey}}";
 
 </script>
 <main id="main-screen">
